# whisperer-rewrite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-mac.sh  makefile  test
content/: desk.srf  journal-open.srf  journal.srf
content/scripts/: chapter1.wsp  draw.wsp  load.wsp
content/text/: english.json  languages.json  spanish.json
content/text/english/: chapter1.json  chapter4.json  chapter5.json  chapter8.json  info.json  test.json
content/text/spanish/: chapter1.json  info.json  test.json
src/: ChapterState.cpp  ChapterState.h  Scene.cpp  Scene.h  ScriptManager.cpp  ScriptManager.h  State.h  TextManager.cpp  TextManager.h  Tween.cpp  Tween.h  Whisperer.cpp  Whisperer.h  main.cpp
src/commands/: audio.h  delay.h  graphics.h  scene.h  util.h
src/menus/: Button.cpp  Button.h  LanguageMenu.cpp  LanguageMenu.h  MainMenu.cpp  MainMenu.h
src/states/: InputDelay.cpp  InputDelay.h  TimeDelay.cpp  TimeDelay.h
